bug fix: parallax scroll flicker

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,3 +5,11 @@
 body {
   background-color: "black";
 }
+
+section {
+  position: relative;
+  display: flex;
+  justify-items: baseline;
+  height: 100%;
+  transform-style: preserve-3d;
+}
